stderr
JudgeMan.java:16: error: cannot find symbol
        if(Arrays.equals(hand, twoPair)){
                               ^
  symbol:   variable twoPair
  location: class JudgeMan
1 error
